syntax = "proto3";

package embedding;

option java_multiple_files = true;
option java_package = "com.cretas.embedding.grpc";
option java_outer_classname = "EmbeddingProto";

// Embedding Service - provides text embedding and similarity computation
service EmbeddingService {
  // Encode single text to embedding vector
  rpc Encode(EncodeRequest) returns (EncodeResponse);

  // Encode multiple texts in batch
  rpc EncodeBatch(EncodeBatchRequest) returns (EncodeBatchResponse);

  // Compute similarity between two texts
  rpc ComputeSimilarity(SimilarityRequest) returns (SimilarityResponse);

  // Find similar texts from candidates
  rpc FindSimilar(FindSimilarRequest) returns (FindSimilarResponse);

  // Health check
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);

  // Get model info
  rpc GetModelInfo(ModelInfoRequest) returns (ModelInfoResponse);
}

// Single encode request
message EncodeRequest {
  string text = 1;
}

// Single encode response - 768 dimensional vector
message EncodeResponse {
  repeated float embedding = 1;  // 768 dimensions for gte-base-zh
  bool success = 2;
  string error_message = 3;
}

// Batch encode request
message EncodeBatchRequest {
  repeated string texts = 1;
}

// Batch encode response
message EncodeBatchResponse {
  repeated EmbeddingVector embeddings = 1;
  bool success = 2;
  string error_message = 3;
}

// Embedding vector wrapper
message EmbeddingVector {
  repeated float values = 1;
}

// Similarity request
message SimilarityRequest {
  string text1 = 1;
  string text2 = 2;
}

// Similarity response
message SimilarityResponse {
  double similarity = 1;  // cosine similarity 0-1
  bool success = 2;
  string error_message = 3;
}

// Find similar request
message FindSimilarRequest {
  string query = 1;
  repeated string candidates = 2;
  double threshold = 3;
  int32 top_k = 4;
}

// Find similar response
message FindSimilarResponse {
  repeated SimilarityResult results = 1;
  bool success = 2;
  string error_message = 3;
}

// Similarity result
message SimilarityResult {
  int32 index = 1;
  string text = 2;
  double score = 3;
}

// Health check request
message HealthCheckRequest {
}

// Health check response
message HealthCheckResponse {
  bool available = 1;
  string status = 2;
}

// Model info request
message ModelInfoRequest {
}

// Model info response
message ModelInfoResponse {
  string model_name = 1;
  int32 dimension = 2;
  bool initialized = 3;
}
